--- a/.github/workflows/cre.yaml
+++ b/.github/workflows/cre.yaml
@@ -10,28 +10,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ دریافت کد
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2️⃣ نصب Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
 
+      # 3️⃣ ساخت package.json اگر موجود نیست
       - name: Initialize package.json if missing
         run: |
           if [ ! -f package.json ]; then
             npm init -y
           fi
 
+      # 4️⃣ نصب وابستگی‌ها
       - name: Install dependencies
         run: |
           npm install express mongoose socket.io node-telegram-bot-api cors dotenv
 
-      - name: Commit package files
+      # 5️⃣ commit و push فایل‌ها به main با GITHUB_TOKEN
+      - name: Commit and Push package files
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
           git add package.json package-lock.json
           git commit -m "Add package.json and dependencies" || echo "No changes to commit"
-          git push
+          git push "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:main
